--- a/app/views/caboose_rets/agents/details.html.erb
+++ b/app/views/caboose_rets/agents/details.html.erb
@@ -1,140 +1,9 @@
-<style>
-	.assistant_name { font-size: 0.9em; margin-left: 10px; }
-</style>
-
-<div class="l-wrapper">
-	<div class="l-sidebar-border inflate-tenor-baritone h-space-pvm">
-		<div class="sidebar-aside">
-			<h3>Meet Our Agents</h3>
-			
-			<select class="h-conceal-tenor-baritone h-space-mbm" onchange="location=this.options[this.selectedIndex].value;">
-				<% @agents.each do |a| %>
-				  <% next if !a.assistant_to.nil? && a.assistant_to.length > 0 %>
-					<option class="agent_name" value="/agents/<%= a.la_code %>/listings">
-						<%= a.first_name %> <%= a.last_name %>
-					</option>
-				<% end %>
-			</select>
-			
-			<ul class="h-reveal-tenor-baritone">
-				<li><a href="/agents/048540000">Richard Ellis, Jr.</a>
-						<ul>
-							<% @agents.each do |as| %>
-								<% if as.assistant_to == "048540000" %>
-									<li class="assistant_name"><%= as.first_name %> <%= as.last_name %></li>
-								<% end %>
-							<% end %>
-						</ul>
-				</li>
-				<% @agents.each do |a| %>
-				  <% next if !a.assistant_to.nil? && a.assistant_to.length > 0 %>
-				  <% next if a.la_code == '048540000' %>
-					<li class="agent_name"><a class="agent_name" href="/agents/<%= a.la_code %>">
-					<%= a.first_name %> <%= a.last_name %>
-					</a>
-						<ul>
-							<% @agents.each do |as| %>
-								<% if as.assistant_to == a.la_code %>
-									<li class="assistant_name"><%= as.first_name %> <%= as.last_name %></li>
-								<% end %>
-							<% end %>
-						</ul>
-					</li>
-				<% end %>
-			</ul>
-		</div> <!-- .sidebar-aside -->
-		
-		<div class="sidebar-body">
-				<% if @agent.la_code == '048540000' %>
-					<div class="h-space-mvm">
-							<% if @prev %><a class="m-btn-red" href="/agents/<%= @prev.la_code %>">Previous Agent</a> &nbsp; <% end %>
-						<% if @next %><a class="m-btn-red" href="/agents/<%= @next.la_code %>">Next Agent</a><% end %>
-					</div>
-			
-					<div class="l-media inflate-baritone">
-						<figure class="media-aside h-type-center">
-						  <img src="https://s3.amazonaws.com/advantagerealtygroup.com/agents/<%= @agent.id %>_large.jpg?<%= DateTime.now.strftime('%F') %>" width="150" /></figure>
-				
-						<div class="media-body">
-							<h4 class="agent_name">
-							<%= @agent.first_name %> <%= @agent.last_name %>
-							</h4>
-						
-							<% if @agent.contact_info.nil? || @agent.contact_info.strip.length == 0 %>
-							  <ul>
-							    <% if @agent.office_phone.strip.length > 0  %><li>Work Phone: <a href="tel:<%=    @agent.office_phone %>"><%= @agent.office_phone  %></a></li><% end %>
-							  	<% if @agent.car_phone.strip.length    > 0  %><li>Cell Phone: <a href="tel:<%=    @agent.car_phone    %>"><%= @agent.car_phone     %></a></li><% end %>
-							  	<% if @agent.home_phone.strip.length   > 0  %><li>Home Phone: <a href="tel:<%=    @agent.home_phone   %>"><%= @agent.home_phone    %></a></li><% end %>
-							  	<% if @agent.member_email.strip.length > 0  %><li>Email:      <a href="mailto:<%= @agent.member_email %>"><%= @agent.member_email  %></a></li><% end %>
-							  </ul>
-							<% else %>
-							  <%= raw @agent.contact_info %>						  
-							<% end %>
-						
-							<p class="h-space-mvs"><a class="m-btn-red" href="/agents/<%= @agent.la_code %>/listings">See My Listings</a></p>
-						</div> <!-- .media-body -->
-					</div> <!-- .l-media -->
-								
-					<article class="h-space-mtm"><%= raw @agent.bio %></article>
-				<% elsif @agent.la_code != "048540000" %>
-					<div class="h-space-mvm">
-							<% if @prev %><a class="m-btn-red" href="/agents/<%= @prev.la_code %>">Previous Agent</a> &nbsp; <% end %>
-						<% if @next %><a class="m-btn-red" href="/agents/<%= @next.la_code %>">Next Agent</a><% end %>
-					</div>
-					
-					<div class="l-media">
-						<figure class="media-aside"><img src="https://s3.amazonaws.com/advantagerealtygroup.com/agents/<%= @agent.id %>_large.jpg?<%= DateTime.now.strftime('%F') %>" width="150" /></figure>
-				
-						<div class="media-body">
-							<h4 class="agent_name">
-							<%= @agent.first_name %> <%= @agent.last_name %>
-							</h4>
-							
-							<% if @agent.contact_info.nil? || @agent.contact_info.strip.length == 0 %> 
-							  <ul>
-							  	<% if @agent.office_phone.strip.length > 0  %><li>Work Phone: <a href="tel:<%=    @agent.office_phone %>"><%= @agent.office_phone  %></a></li><% end %>
-							  	<% if @agent.car_phone.strip.length    > 0  %><li>Cell Phone: <a href="tel:<%=    @agent.car_phone    %>"><%= @agent.car_phone     %></a></li><% end %>
-							  	<% if @agent.home_phone.strip.length   > 0  %><li>Home Phone: <a href="tel:<%=    @agent.home_phone   %>"><%= @agent.home_phone    %></a></li><% end %>
-							  	<% if @agent.member_email.strip.length > 0  %><li>Email:      <a href="mailto:<%= @agent.member_email %>"><%= @agent.member_email  %></a></li><% end %>
-							  </ul>
-							<% else %>
-							  <%= raw @agent.contact_info %>						  
-							<% end %>
-							
-							<p class="h-space-mvs"><a class="m-btn-red" href="/agents/<%= @agent.la_code %>/listings">See <%= @assistants.count > 0 ? 'Our' : 'My' %> Listings</a></p>
-						</div>
-					</div> <!-- .l-media -->
-				
-					<article class="h-space-mtm"><%= raw @agent.bio %></article>
-				<% end %>
-				
-				<% @assistants.each do |a| %>
-					<div class="l-media inflate-baritone h-space-mtl h-space-ptl" style="border-top: 1px solid #D0D0D0;">
-						<div class="media-aside">
-						  <img src="https://s3.amazonaws.com/advantagerealtygroup.com/agents/<%= a.id %>_large.jpg?<%= DateTime.now.strftime('%F') %>" width="150" />
-						</div>
-				
-						<div class="media-body">
-							<h4 class="agent_name">
-							<%= a.first_name %> <%= a.last_name %>
-							</h4>							
-							<% if a.contact_info.nil? || a.contact_info.strip.length == 0 %>
-							  <ul>
-							  	<% if a.office_phone.strip.length > 0 %><li>Work Phone: <a href="tel:<%=    a.office_phone %>"><%= a.office_phone  %></a></li><% end %>
-							  	<% if a.car_phone.strip.length    > 0 %><li>Cell Phone: <a href="tel:<%=    a.car_phone    %>"><%= a.car_phone     %></a></li><% end %>
-							  	<% if a.home_phone.strip.length   > 0 %><li>Home Phone: <a href="tel:<%=    a.home_phone   %>"><%= a.home_phone    %></a></li><% end %>
-							  	<% if a.member_email.strip.length > 0 %><li>Email:      <a href="mailto:<%= a.member_email %>"><%= a.member_email  %></a></li><% end %>
-							  </ul>
-							<% else %>
-							  <%= raw a.contact_info %>						  
-							<% end %>
-							<% if !a.bio.nil? && a.bio.strip.length > 0 %>
-							  <%= raw a.bio %>
-							<% end %>
-							
-						</div> <!-- .media-body -->
-					</div> <!-- .l-media -->
-				<% end %>
-		</div> <!-- .sidebar-body -->
+<div class="agent-details">
+	<div class="constrain">
+		<h2><%= @agent.first_name %> <%= @agent.last_name %></h2>
+		<% if @agent.meta %>
+			<img src="<%= @agent.meta.image.url(:medium) %>" alt="<%= @agent.full_name %>" />
+			<div class="bio richtext"><%== @agent.meta.bio %></div>
+		<% end %>
 	</div>
-</div> <!-- .l-wrapper -->
+</div>
