--- a/app/views/caboose_rets/agents/index.html.erb
+++ b/app/views/caboose_rets/agents/index.html.erb
@@ -1,146 +1,14 @@
-<style>
-	.assistant_name { font-size: 0.9em; margin-left: 10px; }
-</style>
-
-<div class="l-wrapper">
-	<div class="l-sidebar-border inflate-tenor-baritone h-space-pvm">
-		<div class="sidebar-aside">
-			<h3>Meet Our Agents</h3>
-			
-			<select class="h-conceal-tenor-baritone h-space-mbm" onchange="location=this.options[this.selectedIndex].value;">
-				<% @agents.each do |a| %>
-				  <option class="agent_name" value="/agents/<%= a.mls_id %>/listings">
-						<%= a.first_name %> <%= a.last_name %>
-					</option>
-				<% end %>
-			</select>
-			
-			<ul class="h-reveal-tenor-baritone">
-				<li><a href="/agents/048540000">Richard Ellis, Jr.</a></li>
-				<% @agents.each do |a| %>
-				  <% next if a.mls_id == '048540000' %>
-					<li class="agent_name"><a class="agent_name" href="/agents/<%= a.mls_id %>">
-					<%= a.first_name %> <%= a.last_name %>
-					</a>					
-					</li>
-				<% end %>
-			</ul>
-		</div> <!-- .sidebar-aside -->
-
-		
-		<div class="sidebar-body">
-			<% if @agent.mls_id == '048540000' %>
-					<div class="h-space-mvm">
-					<% if @prev %><a class="m-btn-red" href="/agents/<%= @prev.mls_id %>">Previous Agent</a> &nbsp; <% end %>
-					<% if @next %><a class="m-btn-red" href="/agents/<%= @next.mls_id %>">Next Agent</a><% end %>
-				</div>
-		
-				<div class="l-media inflate-baritone">
-					<div style="width: 500px; height: 300px;">					  
-					  <iframe src="//player.vimeo.com/video/77447854?title=0&amp;byline=0&amp;portrait=0&amp;autoplay=1" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-					  <!--
-					  <video preload autoplay height="281px" width="500px" controls>
-					    <source src="https://s3.amazonaws.com/advantagerealtygroup.com/agents/rich.webm" type="video/webm" /> 
-					    <source src="https://s3.amazonaws.com/advantagerealtygroup.com/agents/rich.mp4" type="video/mp4" />
-					    Your browser does not support this video. 
-				    </video>
-				    -->
-					</div>
-					<figure class="media-aside h-type-center"><img src="https://s3.amazonaws.com/advantagerealtygroup.com/agents/<%= @agent.id %>_large.jpg?<%= DateTime.now.strftime('%F') %>" width="150" /></figure>
-			
-					<div class="media-body">
-						<h4 class="agent_name">
-						<%= @agent.first_name %> <%= @agent.last_name %>
-						</h4>
-									
-						<% if @agent.office_phone.nil? || @agent.office_phone.strip.length == 0 %>
-						  <ul>                                  
-						  	<% if @agent.office_phone.strip.length > 0  %><li>Work Phone: <a href="tel:<%=    @agent.office_phone %>"><%= @agent.office_phone  %></a></li><% end %>
-						  	<% if @agent.car_phone.strip.length    > 0  %><li>Cell Phone: <a href="tel:<%=    @agent.car_phone    %>"><%= @agent.car_phone     %></a></li><% end %>
-						  	<% if @agent.home_phone.strip.length   > 0  %><li>Home Phone: <a href="tel:<%=    @agent.home_phone   %>"><%= @agent.home_phone    %></a></li><% end %>
-						  	<% if @agent.member_email.strip.length > 0  %><li>Email:      <a href="mailto:<%= @agent.member_email %>"><%= @agent.member_email  %></a></li><% end %>
-						  </ul>
-						<% else %>
-						  <%= raw @agent.office_phone %>						  
-						<% end %>   
-					
-						<p class="h-space-mvs"><a class="m-btn-red" href="/agents/<%= @agent.mls_id %>/listings">See My Listings</a></p>
-					</div> <!-- .media-body -->
-				</div> <!-- .l-media -->
-							
-				<% if @agent.middle_name %><article class="h-space-mtm"><%= raw @agent.middle_name %></article> <% end %>				
-			<% elsif @agent.mls_id != "048540000" %>
-				<div class="h-space-mvm">
-					<% if @prev %><a class="m-btn-red" href="/agents/<%= @prev.mls_id %>">Previous Agent</a> &nbsp; <% end %>
-					<% if @next %><a class="m-btn-red" href="/agents/<%= @next.mls_id %>">Next Agent</a><% end %>
-				</div>
-				
-				<div class="l-media">
-					<figure class="media-aside"><img src="https://s3.amazonaws.com/advantagerealtygroup.com/agents/<%=@agent.id%>_large.jpg?<%= DateTime.now.strftime('%F') %>" width="150" /></figure>
-			
-					<div class="media-body">
-						<h4 class="agent_name">
-						<%= @agent.first_name %> <%= @agent.last_name %>
-						</h4>
-						
-						<% if @agent.office_phone.nil? || @agent.office_phone.strip.length == 0 %>
-						  <ul>
-						  	<% if @agent.office_phone.strip.length > 0  %><li>Work Phone: <a href="tel:<%=    @agent.office_phone %>"><%= @agent.office_phone  %></a></li><% end %>
-						  	<% if @agent.car_phone.strip.length    > 0  %><li>Cell Phone: <a href="tel:<%=    @agent.car_phone    %>"><%= @agent.car_phone     %></a></li><% end %>
-						  	<% if @agent.home_phone.strip.length   > 0  %><li>Home Phone: <a href="tel:<%=    @agent.home_phone   %>"><%= @agent.home_phone    %></a></li><% end %>
-						  	<% if @agent.member_email.strip.length > 0  %><li>Email:      <a href="mailto:<%= @agent.member_email %>"><%= @agent.member_email  %></a></li><% end %>
-						  </ul>
-						<% else %>
-						  <%= raw @agent.office_phone %>						  
-						<% end %>
-					
-						<p class="h-space-mvs"><a class="m-btn-red" href="/agents/<%= @agent.mls_id %>/listings">See My Listings</a></p>
-					</div>
-				</div> <!-- .l-media -->
-			
-				<article class="h-space-mtm"><%= raw @agent.bio %></article>
+<div class="agents-wrapper">
+	<div class="constrain">
+		<h2>Our Agents</h2>
+		<div class="agent-grid">
+			<% @agents.each do |agent| %>
+				<% pic = agent.meta ? agent.meta.image.url(:large) : 'https://cabooseit.s3.amazonaws.com/assets/shared/default_profile.png' %>
+				<a href="/agents/<%= agent.mls_id %>" class="agent">
+					<div class="photo" style="background-image:url(<%= pic %>);"></div>
+					<h5><%= agent.first_name %> <%= agent.last_name %></h5>
+				</a>
 			<% end %>
-			
-			<% @agents.each do |a| %>
-				<div class="l-media inflate-baritone h-space-mtl h-space-ptl" style="border-top: 1px solid #D0D0D0;">
-					<div class="media-aside">
-						<img src="https://s3.amazonaws.com/advantagerealtygroup.com/agents/<%=a.id%>_large.jpg?<%= DateTime.now.strftime('%F') %>" width="150" />
-					</div>
-			
-					<div class="media-body">
-						<h4 class="agent_name">
-						<%= a.first_name %> <%= a.last_name %>
-						</h4>
-						
-						<% if a.office_phone.nil? || a.office_phone.strip.length == 0 %>
-						<ul>
-							<% if a.office_phone.strip.length > 0 %><li>Work Phone: <a href="tel:<%=    a.office_phone %>"><%= a.office_phone  %></a></li><% end %>
-							<% if a.car_phone.strip.length    > 0 %><li>Cell Phone: <a href="tel:<%=    a.car_phone    %>"><%= a.car_phone     %></a></li><% end %>
-							<% if a.home_phone.strip.length   > 0 %><li>Home Phone: <a href="tel:<%=    a.home_phone   %>"><%= a.home_phone    %></a></li><% end %>
-							<% if a.member_email.strip.length > 0 %><li>Email:      <a href="mailto:<%= a.member_email %>"><%= a.member_email  %></a></li><% end %>
-						</ul>
-						<% else %>
-						  <%= raw a.office_phone %>						  
-						<% end %>
-						<% if !a.middle_name.nil? && a.middle_name.strip.length > 0 %>
-						  <%= raw a.middle_name %>
-						<% end %>
-						
-					</div> <!-- .media-body -->
-				</div> <!-- .l-media -->
-			<% end %>
-		</div> <!-- .sidebar-body -->
+		</div>
 	</div>
-</div> <!-- .l-wrapper -->
-
-<script type="text/javascript">
-	agents = document.getElementsByClassName("agent_name");
-	for(i = 0; i < agents.length; i++){
-		if(agents[i].innerHTML == "Darren Mcausland" || agents[i] == "DARREN MCAUSLAND"){
-			agents[i].innerHTML = "Darren McAusland";
-		}
-		if(agents[i].innerHTML == "Linda Mccrory" || agents[i] == "LINDA MCCRORY"){
-			agents[i].innerHTML = "Linda Mccrory";
-		}
-	}
-</script>
+</div>
