--- a/app/views/caboose_rets/agents/admin_edit.html.erb
+++ b/app/views/caboose_rets/agents/admin_edit.html.erb
@@ -35,6 +35,8 @@
 </p>
 
 
+<div id="agent_<%= @agent.id %>_accepts_listings"></div>
+<br />
 <div id="agent_<%= @agent.id %>_hide"></div>
 <br />
 <div id="agent_<%= @agent.id %>_slug"></div>
@@ -47,6 +49,8 @@
 <div id="agent_<%= @agent.id %>_image"></div>
 
 <div id="message"></div>
+<br /><br />
+<a href="/admin/agents" class="caboose-btn">Back to Agents</a>
 
 <% content_for :caboose_css do %>
 <style>
@@ -76,6 +80,7 @@ $(document).ready(function() {
     update_url: '/admin/agents/<%= @agent.id %>',
     authenticity_token: '<%= form_authenticity_token %>',
     attributes: [
+      { name: 'accepts_listings', nice_name: 'Accepts Listings', type: 'checkbox', value: <%== Caboose.json(@agent_meta.accepts_listings) %>, width: 500, height: 300 },
       { name: 'hide', nice_name: 'Hide', type: 'checkbox', value: <%== Caboose.json(@agent_meta.hide) %>, width: 500, height: 300 },
       { name: 'slug', nice_name: 'Slug', type: 'text', value: <%== Caboose.json(@agent.slug) %>, width: 500 },
       { name: 'bio', nice_name: 'Bio', type: 'richtext', value: <%== Caboose.json(@agent_meta.bio) %>, width: 500, height: 300 },
