--- a/app/views/caboose_rets/agents/admin_index.html.erb
+++ b/app/views/caboose_rets/agents/admin_index.html.erb
@@ -5,7 +5,7 @@
 
 <h1>Agent</h1>
 
-<% if @logged_in_user && @logged_in_user.is_allowed('add', 'rets_agents') %>
+<% if @logged_in_user && @logged_in_user.is_allowed('rets_agents', 'add') %>
   <a href="/admin/agents/edit-sort" class="caboose-btn">Edit Sort Order</a>
 <% end %>
 
